methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:9: error: Boolean(true) does not take parameters
    return true()
               ^