methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  if (estFaceMur()){
    return false
  }
  avance()
  if (getCouleurSol()==Color.green){
    recule()
    return true()
  } else return false
    // Write your code here
}
